<resources>
    <string name="app_name">Qash_FinalProject</string>

    <string name="login_welcome">Selamat Datang di Qash</string>
    <string name="login_subtitle">Masuk ke akun Anda</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Masuk</string>
    <string name="text_no_account">Belum punya akun? </string>
    <string name="text_register_now">Daftar Sekarang</string>

    <string-array name="payment_methods">
        <item>Transfer Bank BCA</item>
        <item>Transfer Bank Mandiri</item>
        <item>Transfer Bank BRI</item>
        <item>Indomaret / Alfamart</item>
        <item>Mobile Banking Lainnya</item>
    </string-array>

    <string-array name="withdraw_merchants">
        <item>Indomaret</item>
        <item>Alfamart</item>
        <item>ATM BCA (Cardless)</item>
        <item>ATM BRI</item>
    </string-array>

    <string-array name="pdam_regions">
        <item>PDAM Jakarta (Aetra)</item>
        <item>PDAM Jakarta (Palyja)</item>
        <item>PDAM Bogor</item>
        <item>PDAM Depok</item>
        <item>PDAM Bekasi</item>
        <item>PDAM Tangerang</item>
        <item>PDAM Surabaya</item>
    </string-array>

    <string-array name="emoney_products">
        <item>Mandiri e-Money</item>
        <item>BCA Flazz</item>
        <item>BNI TapCash</item>
    </string-array>

    <string-array name="pbb_regions">
        <item>PBB DKI JAKARTA</item>
        <item>PBB KOTA DEPOK</item>
        <item>PBB KOTA BOGOR</item>
        <item>PBB KAB. BOGOR</item>
        <item>PBB KOTA BEKASI</item>
        <item>PBB KOTA TANGERANG</item>
        <item>PBB KOTA BANDUNG</item>
        <item>PBB KOTA SURABAYA</item>
    </string-array>

    <string-array name="pbb_years">
        <item>2025</item>
        <item>2024</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
    </string-array>

    <string-array name="bpjs_payment_periods">
        <item>1 Bulan</item>
        <item>3 Bulan</item>
        <item>6 Bulan</item>
        <item>1 Tahun</item>
    </string-array>

</resources>